--- a/.babelrc
+++ b/.babelrc
@@ -5,11 +5,15 @@
       {
         "targets": {
           "browsers": "> 1%",
-          "node": "current",
+          "node": "current"
         }
       }
     ],
+    "@babel/preset-typescript",
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
+  ]
 }
