--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "author": "Alexandr Antonov",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "start": "webpack-dev-server --progress --colors --open --mode development",
+    "build": "webpack --progress --colors --mode production"
   },
   "dependencies": {
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.0",
+    "@types/styled-components": "^4.1.6",
     "axios": "^0.18.0",
     "polished": "^2.3.1",
     "react": "^16.6.3",
@@ -22,12 +28,16 @@
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "redux-devtools-extension": "^2.13.7",
+    "typescript": "^3.2.4",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
