--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "target": "es2015",
     "module": "es2015",
     "strict": true,
-    "jsx": "react"
+    "jsx": "react",
+    "lib": [
+      "es2017",
+      "dom"
+    ]
   },
   "include": [
     "app/*"
