--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "start": "webpack-dev-server --progress --colors --open --mode development",
+    "type-check:watch": "yarn run type-check -- --watch",
+    "start": "webpack-dev-server --progress --colors --mode development",
     "build": "webpack --progress --colors --mode production"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.0.0",
     "@types/styled-components": "^4.1.6",
     "axios": "^0.18.0",
+    "create-action-ts": "^0.6.0",
     "polished": "^2.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -38,7 +39,9 @@
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "redux-devtools-extension": "^2.13.7",
+    "svg-url-loader": "^2.3.2",
     "typescript": "^3.2.4",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
