--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "author": "Alexandr Antonov",
   "license": "MIT",
   "scripts": {
-    "lint": "tslint --config tslint.json ./**/*.{js,jsx,ts,tsx}",
+    "lint": "tslint --type-check --config tslint.json ./**/*.{js,jsx,ts,tsx}",
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn run type-check -- --watch",
     "start": "webpack-dev-server --progress --colors --mode development",
     "build": "webpack --progress --colors --mode production"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+     "*.{jsx?,tsx?}": ["yarn lint"]
   },
   "dependencies": {
     "@types/react": "^16.7.20",
@@ -40,7 +48,9 @@
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "image-webpack-loader": "^4.6.0",
+    "lint-staged": "^8.1.4",
     "redux-devtools-extension": "^2.13.7",
     "svg-url-loader": "^2.3.2",
     "tslint": "^5.12.1",
